first try of emiters

--- a/src/Components/MainDashboard/VideoEdit.module.css
+++ b/src/Components/MainDashboard/VideoEdit.module.css
@@ -160,6 +160,7 @@
 }
 .formContainer > :nth-child(6) {
   align-self: flex-end;
+  margin: 2px 8px;
   justify-self: flex-end;
   grid-area: bs;
   background-color: var(--primary-blue);
@@ -180,6 +181,7 @@
 }
 
 .formContainer > :nth-child(7) {
+  margin: 2px 8px;
   align-self: flex-end;
   justify-self: center;
   grid-area: bc;
@@ -209,6 +211,26 @@
   backdrop-filter: blur(6px);
   margin-top: 0;
   width: 100%;
+}
+
+.LoadingModal {
+  height: fit-content;
+  padding: 15px;
+  background-color: var(--primary-white);
+  width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 6px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.LoadingModal > :last-child {
+  text-align: center;
 }
 
 @media only screen and (max-width: 1300px) {
