--- a/src/Components/EditFields/TextEditField.module.css
+++ b/src/Components/EditFields/TextEditField.module.css
@@ -13,18 +13,27 @@
   color: var(--white-text);
   background-color: var(--primary-blue);
   padding: 8px;
+  transition: all ease 300ms;
+}
+.buttonRed:hover {
+  background-color: var(--secondary-blue);
 }
 
 .buttonRed {
   border-radius: 10px;
   border: none;
+  padding: 8px;
   color: var(--white-text);
   background-color: var(--primary-red);
+  transition: all ease 300ms;
+}
+.buttonRed:hover {
+  background-color: var(--secondary-red);
 }
 
 .field {
   outline: none;
-  padding-left: 8px;
+  padding: 8px;
   border: 1px solid var(--primary-blue);
   margin-left: 10px;
   border-radius: 8px;
