--- a/src/Components/MainDashboard/Categories.module.css
+++ b/src/Components/MainDashboard/Categories.module.css
@@ -3,6 +3,7 @@
   grid-template: repeat(2, 300px) / repeat(auto-fit, minmax(250px, 1fr));
   gap: 25px;
   grid-auto-rows: 300px;
+  justify-items: center;
 }
 
 .addCategory {
