--- a/src/Components/MainDashboard/CategoryEdit.module.css
+++ b/src/Components/MainDashboard/CategoryEdit.module.css
@@ -14,6 +14,11 @@
   padding-bottom: 35px;
 }
 
+.videoContent img {
+  max-width: 100%;
+  max-height: 150px;
+}
+
 .addVideo {
   position: fixed;
   top: 105px;
@@ -41,6 +46,7 @@
   gap: 15px;
   margin: 15px;
   grid-template: repeat(2, 1fr) / repeat(auto-fit, minmax(230px, 1fr));
+  justify-items: center;
 }
 
 .modalContainer {
