--- a/src/Components/MainDashboard/VideoEdit.module.css
+++ b/src/Components/MainDashboard/VideoEdit.module.css
@@ -277,8 +277,25 @@
 
   .formContainer > :first-child {
     position: fixed;
-    top: 120px;
-    right: 50px;
+    top: 80px;
+    right: 20px;
     z-index: 10;
+    padding: 10px;
   }
 }
+
+
+@media only screen and (max-width: 590px) {
+  .formContainer > :first-child {
+    top : 200px;
+    right : 20px
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .formContainer > :first-child {
+    top : 280px;
+    right : 20px
+  }
+}
+
